RWD/GUI - Fix videos on mobile

--- a/GUI/src/ProjectVideos/ProjectVideos.css
+++ b/GUI/src/ProjectVideos/ProjectVideos.css
@@ -112,8 +112,12 @@
     font-weight: bold;
 }
 
+.btnn a {
+    text-decoration: none;
+}
+
 /* Media Query for smaller screens */
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 820px) {
     .Videos {
         grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
     }
